force-app/main/default/objects/Meeting_History__c/Meeting_History__c.object-meta.xml
<CustomObject>
    <label>Meeting History</label>
    <nameField>
        <displayFormat>MH-{00000}</displayFormat>
        <label>Meeting History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>