force-app/main/default/objects/Meeting_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Meeting History Changes</relationshipLabel>
    <relationshipName>Meeting_History_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>