force-app/main/default/objects/Meeting_History__c/fields/From_Status__c.field-meta.xml
<CustomField>
    <fullName>From_Status__c</fullName>
    <label>From Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>