force-app/main/default/objects/Meeting_History__c/fields/To_Status__c.field-meta.xml
<CustomField>
    <fullName>To_Status__c</fullName>
    <label>To Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>